Change metrics from percentages to actual daily counts
- Update metricRanges to use count-based ranges (e.g., glass repairs: 0-50, PM records: 0-100)
- Remove '%' unit and use empty string for count metrics
- Update status.csv with realistic daily count data instead of percentages
- Charts now show actual numbers completed rather than completion percentages

--- a/index.html
+++ b/index.html
@@ -238,11 +238,11 @@
         
         // Define custom ranges for each metric
         const metricRanges = {
-            'glass_repair_completion': { min: 80, max: 100, unit: '%' },
-            'pm_records_filed': { min: 80, max: 100, unit: '%' },
-            'key_replacements_completed': { min: 75, max: 100, unit: '%' },
-            'repair_orders_closed': { min: 85, max: 100, unit: '%' },
-            'overall_efficiency': { min: 80, max: 100, unit: '%' }
+            'glass_repair_completion': { min: 0, max: 50, unit: '' },
+            'pm_records_filed': { min: 0, max: 100, unit: '' },
+            'key_replacements_completed': { min: 0, max: 25, unit: '' },
+            'repair_orders_closed': { min: 0, max: 80, unit: '' },
+            'overall_efficiency': { min: 0, max: 100, unit: '' }
         };
         
         // Store chart instances for cleanup
