Update metric ranges and remove overall_efficiency
- Glass repairs: 0-20 (was 0-50)
- PM records: 0-100 (no change)
- Key replacements: 0-20 (was 0-25)
- Repair orders: 0-300 (was 0-80)
- Remove overall_efficiency metric from both metricRanges and CSV

--- a/index.html
+++ b/index.html
@@ -238,11 +238,10 @@
         
         // Define custom ranges for each metric
         const metricRanges = {
-            'glass_repair_completion': { min: 0, max: 50, unit: '' },
+            'glass_repair_completion': { min: 0, max: 20, unit: '' },
             'pm_records_filed': { min: 0, max: 100, unit: '' },
-            'key_replacements_completed': { min: 0, max: 25, unit: '' },
-            'repair_orders_closed': { min: 0, max: 80, unit: '' },
-            'overall_efficiency': { min: 0, max: 100, unit: '' }
+            'key_replacements_completed': { min: 0, max: 20, unit: '' },
+            'repair_orders_closed': { min: 0, max: 300, unit: '' }
         };
         
         // Store chart instances for cleanup
