--- a/index.html
+++ b/index.html
@@ -141,9 +141,9 @@
         // Load and display status data from CSV
         async function loadStatusData() {
             try {
-                const response = await fetch('status.csv');
+                const response = await fetch('https://docs.google.com/spreadsheets/d/e/2PACX-1vS3C1WvZNWdMImmuKF_Jqi8Y8zggyboVvidEU2fzHjhNlLikBb5nDrf3CNFWGwd1HKzjbDyytM8LT8U/pub?gid=0&single=true&output=csv');
                 if (!response.ok) {
-                    throw new Error(`Failed to fetch status.csv: ${response.status}`);
+                    throw new Error(`Failed to fetch status data: ${response.status}`);
                 }
                 const csvText = await response.text();
                 
