Rename repair_orders_closed to atl_ro_levels with range 200-1000
- Change metric name from repair_orders_closed to atl_ro_levels
- Update range from 0-300 to 200-1000
- User must update Google Sheet column header to match: atl_ro_levels

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
             'glass_repair_completion': { min: 0, max: 20, unit: '' },
             'pm_records_filed': { min: 0, max: 100, unit: '' },
             'key_replacements_completed': { min: 0, max: 20, unit: '' },
-            'repair_orders_closed': { min: 0, max: 300, unit: '' }
+            'atl_ro_levels': { min: 200, max: 1000, unit: '' }
         };
         
         // Store chart instances for cleanup
