Complete rename to missing_keys metric
- Change key_replacements_completed to missing_keys in metricRanges
- Display will show 'Missing Keys' instead of 'Key Replacements Completed'
- Google Sheet column header must be updated to 'missing_keys' before this works

--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                 card.appendChild(header);
                 card.appendChild(valueDiv);
                 card.appendChild(statusPara);
-                container.appendChild(card);
+             missing_keysard);
             });
         }
         
