Fix syntax error: restore corrupted line
- Fix 'missing_keysard)' typo back to 'container.appendChild(card)'
- This was causing a JavaScript syntax error

--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                 card.appendChild(header);
                 card.appendChild(valueDiv);
                 card.appendChild(statusPara);
-             missing_keysard);
+                container.appendChild(card);
             });
         }
         
