--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
         const metricRanges = {
             'glass_repair_completion': { min: 0, max: 20, unit: '', lowerIsBetter: true },
             'pm_records_filed': { min: 0, max: 100, unit: '', lowerIsBetter: false },
-            'key_replacements_completed': { min: 0, max: 20, unit: '', lowerIsBetter: true },
+            'missing_keys': { min: 0, max: 20, unit: '', lowerIsBetter: true },
             'atl_ro_levels': { min: 200, max: 1000, unit: '', lowerIsBetter: true }
         };
         
