--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <!-- Progress Over Time Charts -->
             <section class="bg-white rounded-lg shadow-lg p-8">
                 <h2 class="text-2xl font-semibold text-gray-800 mb-6">Progress Over Time</h2>
-                <div id="charts-container" class="space-y-8">
+                <div id="charts-container" class="grid grid-cols-1 lg:grid-cols-2 gap-6">
                     <!-- Individual charts will be loaded here -->
                 </div>
             </section>
