Change titles to Dirk Steele Dashboard and add Supply Management responsibility
- Update page title and header from Supply Chain Management to Dirk Steele Dashboard
- Add new responsibility: Supply Management - Monitor and Report on Airport Oil Levels

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Supply Chain Management Dashboard</title>
+    <title>Dirk Steele Dashboard</title>
     
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -40,7 +40,7 @@
         <main class="flex-1 p-8">
             <!-- Header -->
             <header class="mb-8">
-                <h1 class="text-4xl font-bold text-gray-900 mb-2">Supply Chain Management Dashboard</h1>
+                <h1 class="text-4xl font-bold text-gray-900 mb-2">Dirk Steele Dashboard</h1>
                 <p class="text-gray-600">Executive Overview - Real-time Performance Metrics</p>
             </header>
             
